# TSP-Optimization-solvers

./: .gitignore  CMakeLists.txt  Dockerfile  Readme.md  batch_run_tsp.c  batch_run_tsp.py  benchmark.csv  cplex_costs.csv  gnuplot_commands.txt
data/: att48.tsp  tsp_mock.tsp
profiler/: performance_profile.py  profiler.py
report/: appendix.aux  appendix.tex  main.loa  main.tex  main.toc  sample.bib
src/: benchmark.c  benchmark_utils.c  benchmark_utils.h  common.c  common.h  cplex_builder.c  cplex_builder.h  cplex_callbacks.c  cplex_callbacks.h  cplex_common.c  cplex_common.h  genetic.h  main.c  tsp.c  tsp.h  tsp_common.c  tsp_common.h  utils.c  utils.h
tests/: CMakeLists.txt  CplexTests.cpp  TspTests.cpp  UnitTests.cpp
